@@ -6,12 +6,12 @@ sub refresh {
    my $ncol = $self->ncol;
 
    my $text = " " x $ncol;
-   my $rend = [(urxvt::DEFAULT_RSTYLE | urxvt::RS_RVid) x $ncol];
+   my $rend = [($self->{rs_tabbar}) x $ncol];
 
    my @ofs;
 
    substr $text, 0, 7, "[NEW] |";
-   @$rend[0 .. 5] = (urxvt::OVERLAY_RSTYLE) x 6;
+   @$rend[0 .. 5] = ($self->{rs_tab}) x 6;
    push @ofs, [0, 6, sub { $_[0]->new_tab }];
 
    my $ofs = 7;
@@ -27,7 +27,7 @@ sub refresh {
       my $len = length $txt;
 
       substr $text, $ofs, $len + 1, "$txt|";
-      @$rend[$ofs .. $ofs + $len - 1] = (urxvt::OVERLAY_RSTYLE) x $len
+      @$rend[$ofs .. $ofs + $len - 1] = ($self->{rs_tab}) x $len
          if $tab == $self->{cur};
 
       push @ofs, [ $ofs, $ofs + $len, sub { $_[0]->make_current ($tab) } ];
@@ -73,9 +73,10 @@ sub configure {
 
    my $tab = $self->{cur};
 
+   # this is an extremely dirty way to force a configurenotify, but who cares
    $tab->XMoveResizeWindow (
       $tab->parent,
-      0, $self->{tabheight} - 1,
+      0, $self->{tabheight} + 1,
       $self->width, $self->height - $self->{tabheight}
    );
    $tab->XMoveResizeWindow (
@@ -132,6 +133,38 @@ sub make_current {
    ()
 }
 
+sub on_focus_in {
+   my ($self, $event) = @_;
+
+   $self->{cur}->focus_in;
+
+   ()
+}
+
+sub on_focus_out {
+   my ($self, $event) = @_;
+
+   $self->{cur}->focus_out;
+
+   ()
+}
+
+sub on_key_press {
+   my ($self, $event) = @_;
+
+   $self->{cur}->key_press ($event->{state}, $event->{keycode}, $event->{time});
+
+   1
+}
+
+sub on_key_release {
+   my ($self, $event) = @_;
+
+   $self->{cur}->key_release ($event->{state}, $event->{keycode}, $event->{time});
+
+   1
+}
+
 sub on_button_press {
    1
 }
@@ -165,10 +198,23 @@ sub on_init {
    }
 
    $self->resource (int_bwidth => 0);
-   $self->resource (name => "URxvt.tab");
+   $self->resource (name => "URxvt.tabbed");
    $self->resource (pty_fd => -1);
 
    $self->option ($urxvt::OPTION{scrollBar}, 0);
+
+   my $fg    = $self->x_resource ("tabbar-fg");
+   my $bg    = $self->x_resource ("tabbar-bg");
+   my $tabfg = $self->x_resource ("tab-fg");
+   my $tabbg = $self->x_resource ("tab-bg");
+
+   defined $fg    or $fg    = 3;
+   defined $bg    or $bg    = 0;
+   defined $tabfg or $tabfg = 0;
+   defined $tabbg or $tabbg = 1;
+
+   $self->{rs_tabbar} = urxvt::SET_COLOR (urxvt::DEFAULT_RSTYLE, $fg    + 2, $bg    + 2);
+   $self->{rs_tab}    = urxvt::SET_COLOR (urxvt::DEFAULT_RSTYLE, $tabfg + 2, $tabbg + 2);
 
    ()
 }
@@ -177,6 +223,8 @@ sub on_start {
    my ($self) = @_;
 
    $self->{tabheight} = $self->int_bwidth + $self->fheight + $self->lineSpace;
+
+   $self->cmd_parse ("\033[?25l");
 
    $self->new_tab;
 
